# Ohm-agent

./: .gitignore  Cargo.toml  LICENSE  README.md  TOOL_CALLING_BOX_DESIGN.md
.scratch/mcp-server/issues/: 01-mcp-server-transport.md  02-mcp-protocol-handlers.md  03-wire-tool-harness.md  04-cli-integration.md
docs/superpowers/plans/: 2026-07-22-command-preview-panel.md
docs/superpowers/specs/: 2026-07-22-command-preview-panel-design.md
src-tauri/: Cargo.toml
src-tauri/crates/entropy/src/: gc.rs  lib.rs  scanner.rs
src-tauri/crates/harness/src/: engine.rs  golden.rs  lib.rs  patterns.rs  persistence.rs  repeated.rs  rules.rs  scoring.rs  structural.rs  taste.rs
src-tauri/crates/mcp-server/: Cargo.toml
src-tauri/crates/mcp-server/src/: error.rs  lib.rs  server.rs  types.rs
src-tauri/crates/mcp-server/src/bridge/: config.rs  mod.rs  remote_client.rs  router.rs
src-tauri/crates/mcp-server/src/transport/: http.rs  mod.rs  stdio.rs
src-tauri/crates/mcp/src/: lib.rs  skills.rs  transport.rs
src-tauri/crates/mcp/src/src/: embed.rs  lib.rs  project.rs  session.rs  user.rs
src-tauri/crates/memory/: Cargo.toml
src-tauri/crates/memory/src/: embed.rs  lib.rs  project.rs  session.rs  user.rs
src-tauri/crates/omega-cli/: Cargo.toml  README.md  SKILL.md
src-tauri/crates/omega-cli/skills/: example.mcp.json  filesystem.mcp.json
src-tauri/crates/omega-cli/src/: app.rs  event.rs  main.rs  message.rs  ui.rs
src-tauri/crates/omega-cli/src/backend/: mod.rs  providers_backend.rs
src-tauri/crates/omega-cli/src/commands/: gate.rs  mcp.rs  mod.rs
src-tauri/crates/omega-core/: Cargo.toml
src-tauri/crates/omega-core/src/: context.rs  error.rs  lib.rs  session.rs
src-tauri/crates/omega-core/src/commands/: build_cmd.rs  chat.rs  gate.rs  mcp.rs  memory.rs  mod.rs  plan_cmd.rs  review_cmd.rs  tables.rs  tools.rs  web.rs
src-tauri/crates/omega-core/src/pipeline/: build.rs  mod.rs  plan.rs  review.rs  review_score.rs  state.rs
src-tauri/crates/omega-core/src/tui/: command_palette.rs  component.rs  editor.rs  header.rs  help.rs  layout.rs  markdown.rs  mod.rs  omega_mark.rs  provider_panel.rs  spinner.rs  status.rs  theme.rs  transcript.rs
src-tauri/crates/omega-core/tests/: commands_web.rs
src-tauri/crates/omega-table/src/: content.rs  index.rs  lib.rs  lru.rs  meta.rs
src-tauri/crates/providers/src/: anthropic.rs  google.rs  lib.rs  local.rs  mistral.rs  openai.rs
src-tauri/crates/ratata/: Cargo.toml
src-tauri/crates/ratata/src/: application.rs  command.rs  events.rs  lib.rs  message.rs  screen.rs
src-tauri/crates/tool-harness/: Cargo.toml
src-tauri/crates/tool-harness/src/: budget.rs  context.rs  hooks.rs  lib.rs  metadata.rs  orchestrator.rs  permission.rs  pipeline.rs  registry.rs  schema.rs  traits.rs  types.rs
src-tauri/crates/tool-harness/src/box_/: mod.rs
src-tauri/crates/tool-harness/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src-tauri/src/: provider_panel.rs
src-tauri/src/commands/: build_cmd.rs  chat.rs  plan_cmd.rs  review_cmd.rs
src-tauri/src/tui/: markdown.rs
src/components/: BuildPanel.tsx  MemoryPanel.tsx  PlanPanel.tsx
