[workspace]
resolver = "2"
members = [
    "src-tauri/crates/harness",
    "src-tauri/crates/entropy",
    "src-tauri/crates/omega-table",
    "src-tauri/crates/providers",
    "src-tauri/crates/memory",
    "src-tauri/crates/mcp",
    "src-tauri/crates/tool-harness",
    "src-tauri/crates/omega-core",
    "src-tauri/crates/omega-cli",
]
