[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for Omega Agent — exposes native tools via Model Context Protocol"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio-stream = "0.1"
mcp = { path = "../mcp" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"