[package]
name = "tool-harness"
version = "0.1.0"
edition = "2021"
description = "Tool calling harness for Omega Agent — robust, extensible framework"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
regex = "1.0"
glob = "0.3"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
md5 = "0.7"
dirs = "5"

providers = { path = "../providers" }
mcp = { path = "../mcp" }

[dev-dependencies]
tempfile = "3"